# paggo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: command.rs  lib.rs  main.rs
