[package]
name = "paggo"
license = ""
version = "0.1.0"
edition = "2021"
description = "A simple database server implementation."
authors = ["Joshua Benfield"]
homepage = "https://github.com/devhsoj/paggo"
repository = "https://github.com/devhsoj/paggo"
readme = "./README.md"
keywords = ["database", "server", "redis"]
categories = ["asynchronous", "database-implementations"]
exclude = [".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"], optional = true }
dashmap = "5.4.0"
tokio = { version = "1.28.1", features = ["full"] }

[features]
default = ["cli"]
cli = ["clap"]

