[package]
name = "paggo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4.0", features = [] }
tokio = { version = "1", features = ["net", "bytes", "mio", "io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
